Scroll to selected pos, specific bar is now lower